fix(icon_lib,layout size): changed icon library from fontawesome to materalize icons and removed some layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,6 @@ img {
   z-index: 11;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
 }
 
 .showing .player-header {
@@ -30,6 +29,7 @@ img {
   justify-content: space-between;
   padding: 0.5rem 1rem;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .showing .about-song {
@@ -37,7 +37,7 @@ img {
 }
 
 .showing .song-container {
-  height: 15rem;
+  height: 200px;
   border: 1px solid #000000;
   display: flex;
   align-items: center;
@@ -57,16 +57,16 @@ img {
 }
 
 .showing .song-detail {
-  margin-top: 1rem;
+  margin-top: 10px;
 }
 .song-detail h3 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   text-align: center;
   font-weight: 700;
 }
 
 .showing .song-name {
-  font-size: 1.875rem; /* equivalent to text-3xl */
+  font-size: 1.875rem; 
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -86,9 +86,17 @@ img {
   flex-direction: column;
   width: 100%;
   gap: 0.75rem;
-  margin-top: 0.75rem;
+  margin-top: 10px;
 }
-
+.showing .controls i{
+  padding: 5px;
+  background-size: 1/1;
+  border-radius: 50%;
+}
+.showing .controls i:hover{
+  background-color: rgba(180, 180, 180, 0.527);
+  
+}
 .showing .duration {
   display: flex;
   align-items: center;
@@ -137,15 +145,29 @@ img {
   display: flex;
   flex-direction: row;
   height: fit-content;
+  width: 100%;
   background: whitesmoke;
   position: sticky;
-  padding: 0.3rem 0.45rem;
+  padding: 5px 10px;
   bottom: 0;
   left: 0;
   right: 0;
   border-radius: 1rem 1rem 0 0;
 }
-
+.minimized .about-song .song-detail h3{
+  font-size: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+.minimized .about-song .song-detail p{
+  font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
 .minimized .player-header {
   display: none;
 }
@@ -199,4 +221,12 @@ img {
 }
 .minimized .controls {
   margin-top: unset;
+  gap: unset;
+  padding-right: 10px;
+}
+.controls .material-icons {
+  font-size: 35px;
+}
+.minimized .material-icons {
+  font-size: 25px;
 }
